--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    scroll-behavior: smooth;
+}
+
 #app {
     /* bg-midnight text-white-200 flex flex-col justify-center m-0 p-0 */
     display: flex;
