Design changes - added project cards

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -17,6 +17,6 @@ html {
         font-family: Proxima Nova, system-ui, sans-serif;
         margin: 0;
         padding: 0;
-        background-color: #1e293b;
+        background-color: #2A3952;
     }
 }
