--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -7,9 +7,9 @@ html {
 }
 
 #app {
-    /* bg-midnight text-white-200 flex flex-col justify-center m-0 p-0 */
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
 }
 
 @layer base {
